--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,8 +19,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                <li th:if="${user != null}" class="nav-item">
+                    <a th:text="${user.name}" class="nav-link active" th:href="@{/user}" />
+                </li>
+                <li th:if="${user == null}" class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+                </li>
+                <li th:if="${user == null}" class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
+                  </li>
+                <li th:if="${user != null}" class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
                 </li>
             </ul>
         </div>
