--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -40,6 +40,7 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email</th>
+                <th>Saved Recipes</th>
             </tr>
         </thead>
         <tbody>
@@ -47,6 +48,7 @@
                 <td th:text = "${user.firstName}"></td>
                 <td th:text = "${user.lastName}"></td>
                 <td th:text = "${user.email}"></td>
+                <td th:text = "${#lists.size(user.recipes)}"></td>
             </tr>
         </tbody>
     </table>
