--- a/src/main/resources/templates/recipe.html
+++ b/src/main/resources/templates/recipe.html
@@ -29,32 +29,37 @@
         </div>
     </div>
 </nav>
+<br /><br />
 <div class="container">
-    <div th:if="${param.error}">
-        <div class="alert alert-danger">Not Authorized</div>
+    <div class="row">
+        <a 
+            th:href="@{/user/recipes}" 
+            type="button" 
+            class="btn btn-primary btn-sm mt-4 mb-4 mr-4">
+            Back to saved recipes
+        </a>
+        <h1 class="text-center">Quick Recipes</h1>
+        <hr>
+        <div>
+            <h4 th:text="${recipe.name}" />
+            <p>Ingredients: </p>
+            <div th:each="ingredient: ${recipe.ingredients}" >
+                <p th:text="${ingredient}" />
+            </div>
+            <p>Directions:</p>
+            <div th:each="direction: ${recipe.directions}" >
+                <p th:text="${direction}" />
+            </div>
+    
+            <p>Saved by <span th:text="${#lists.size(recipe.users)}" /> users </p>
+            <a  
+                th:href="@{/user/recipes/removeRecipeFromList(recipeId=${recipe.id})}"
+                type="button"
+                class="btn btn-warning btn-sm">
+                Unsave
+            </a>
+        </div>
     </div>
-   
-    <div class="row col-md-10">
-        <h2>List of Registered Users</h2>
-    </div>
-    <table class="table table-bordered table-hover">
-        <thead class="table-dark">
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-                <th>Saved Recipes</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each = "user : ${users}">
-                <td th:text = "${user.firstName}"></td>
-                <td th:text = "${user.lastName}"></td>
-                <td th:text = "${user.email}"></td>
-                <td th:text = "${#lists.size(user.recipes)}"></td>
-            </tr>
-        </tbody>
-    </table>
 </div>
 </body>
 </html>
