--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -38,23 +38,19 @@
         <h2>Hello <span th:text="${user.name}"></span></h2>
     </div>
 
-    <a th:href="@{/recipes}" class="btn btn-primary btn-sm">See Recipes</a>
-    <!-- <table class="table table-bordered table-hover">
-        <thead class="table-dark">
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each = "user : ${users}">
-                <td th:text = "${user.firstName}"></td>
-                <td th:text = "${user.lastName}"></td>
-                <td th:text = "${user.email}"></td>
-            </tr>
-        </tbody>
-    </table> -->
+    <a 
+        th:href="@{/user/recipes}" 
+        type="button" 
+        class="btn btn-primary btn-sm mt-4 mb-4 mr-4">
+        See Recipes
+    </a>
+    <a  
+        th:href="@{/user/findRecipe}"
+        type="button"
+        class="btn btn-warning btn-sm mt-4 mb-4 mr-4">
+        Find a New Recipe
+    </a>
+   
 </div>
 </body>
 </html>
