--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -42,13 +42,19 @@
         th:href="@{/user/recipes}" 
         type="button" 
         class="btn btn-primary btn-sm mt-4 mb-4 mr-4">
-        See Recipes
+        See Saved Recipes
     </a>
     <a  
         th:href="@{/user/findRecipe}"
         type="button"
         class="btn btn-warning btn-sm mt-4 mb-4 mr-4">
         Find a New Recipe
+    </a>
+    <a  
+        th:href="@{/user/recipes/otherRecipes}"
+        type="button"
+        class="btn btn-warning btn-sm mt-4 mb-4 mr-4">
+        Recently Saved By Other Users
     </a>
    
 </div>
