--- a/src/main/resources/templates/other-recipes.html
+++ b/src/main/resources/templates/other-recipes.html
@@ -29,7 +29,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li th:if="${user != null}" class="nav-item">
               <a
-                th:text="${user.name}"
+                th:text="${user.firstName}"
                 class="nav-link active"
                 th:href="@{/user}"
               />
