--- a/src/main/resources/templates/recipe.html
+++ b/src/main/resources/templates/recipe.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li th:if="${user != null}" class="nav-item">
-                    <a th:text="${user.name}" class="nav-link active" th:href="@{/user}" />
+                    <a th:text="${user.firstName}" class="nav-link active" th:href="@{/user}" />
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
