--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,41 +5,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Quick Meal Planner</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav th:replace="~{fragments/general :: header}" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Quick Meal Planner</a>
+        <a class="navbar-brand" th:href="@{/index}">TEST Quick Meal Planner</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li th:if="${user != null}" class="nav-item">
-                    <a th:text="${user.firstName}" class="nav-link active" th:href="@{/user}" />
+                    <a th:text="${user.firstName}" class="nav-link" th:href="@{/user}" />
                 </li>
                 <li th:if="${user == null}" class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+                    <a class="nav-link" th:href="@{/register}">Register</a>
                 </li>
                 <li th:if="${user == null}" class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
+                    <a class="nav-link" th:href="@{/login}">Login</a>
                   </li>
                 <li th:if="${user != null}" class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+                    <a class="nav-link" th:href="@{/logout}">Logout</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-<br /><br />
-<div class="container">
+
+<div class="container min-full-height">
     <div class="row">
         <h1 class="text-center"> Find Quick Meal Ideas in No Time with the help of ChatGPT </h1>
     </div>
 </div>
+<footer th:replace="~{fragments/general :: footer}" >
+    <p>Testing Footer</p>
+</footer>
 </body>
 </html>
