--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,11 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration and Login System</title>
+    
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
         crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/style.css">
+
 </head>
+
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
@@ -17,17 +21,16 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse"  style="flex-grow:inherit;" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
+          <a class="nav-link" th:href="@{/login}">Login</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-<br /><br /><br />
-<div class="container">
+<div class="container min-full-height">
   <div class="row col-md-8 offset-md-2">
     <div class="card">
       <div class="card-header">
@@ -109,5 +112,8 @@
     </div>
   </div>
 </div>
+<footer th:replace="~{fragments/general :: footer}" >
+  <p>Testing Footer</p>
+</footer>
 </body>
 </html>
