--- a/src/main/resources/templates/other-recipes.html
+++ b/src/main/resources/templates/other-recipes.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <title>Quick Meal Planner</title>
-    
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css">
-
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <nav th:replace="~{fragments/general :: header}" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav
+      th:replace="~{fragments/general :: header}"
+      class="navbar navbar-expand-lg navbar-dark bg-dark"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/index}">Quick Meal Planner</a>
         <button
@@ -52,62 +54,65 @@
 
     <div class="container-fluid min-full-height dashboard-container">
       <div class="row full-height">
-        <div th:replace="~{fragments/general :: dash-nav(activeTab='otherRecipes')}" class="col-md-3 col-lg-2">
-          <p>Testing Side Nav</p>
+        <div class="col-md-3 col-lg-2 dashboard-nav-container-wrapper">
+          <div
+            th:replace="~{fragments/general :: dash-nav(activeTab='otherRecipes')}"
+          >
+            <p>Testing Side Nav</p>
+          </div>
         </div>
 
-        <div class="col-md-9 col-lg-10">
-              <div class="row">
-                <h1 class="text-center">Recently Saved Recipes by Other Users</h1>
-                <hr />
+        <div class="col-md-9 col-lg-10 dashboard-content-container-wrapper">
+          <div class="row">
+            <h1 class="text-center">Recently Saved Recipes by Other Users</h1>
+            <hr />
 
-                <div
-                  th:each="recipe: ${recipes}"
-                  class="p-2 col-xs-12 col-sm-6 col-md-4 col-lg-3" >
-                  <div class="card" style="height: 100%;">
-                    <div class="card-body">
-                          <h5 th:text="${recipe.name}" class="card-title" />
-                          <h6
-                            class="card-subtitle mb-2 text-body-secondary"
-                            style="font-size: 0.8rem"
-                          >
-                            Saved by <span th:text="${#lists.size(recipe.users)}" /> users
-                          </h6>
-                          <p class="card-text">
-                            Requires
-                            <span th:text="${#lists.size(recipe.ingredients)}" /> ingredients
-                            <br />
-                            Complete in
-                            <span th:text="${#lists.size(recipe.directions)}" /> steps
-                          </p>
-                          <a
-                            th:href="@{/user/recipes/recipe(recipeId=${recipe.id})}"
-                            type="button"
-                            class="btn btn-primary btn-sm"
-                          >
-                            See Recipe
-                          </a>
-                          <a
-                            th:href="@{/user/recipes/addRecipeToList(recipeId=${recipe.id})}"
-                            type="button"
-                            class="btn btn-warning btn-sm"
-                          >
-                            Save Recipe
-                          </a>
-                        </div>
-
-                  </div>
-                  
+            <div
+              th:each="recipe: ${recipes}"
+              class="p-2 col-xs-12 col-sm-6 col-md-4 col-lg-3"
+            >
+              <div class="card" style="height: 100%">
+                <div class="card-body">
+                  <h5 th:text="${recipe.name}" class="card-title" />
+                  <h6
+                    class="card-subtitle mb-2 text-body-secondary"
+                    style="font-size: 0.8rem"
+                  >
+                    Saved by
+                    <span th:text="${#lists.size(recipe.users)}" /> users
+                  </h6>
+                  <p class="card-text">
+                    Requires
+                    <span th:text="${#lists.size(recipe.ingredients)}" />
+                    ingredients
+                    <br />
+                    Complete in
+                    <span th:text="${#lists.size(recipe.directions)}" /> steps
+                  </p>
+                  <a
+                    th:href="@{/user/recipes/recipe(recipeId=${recipe.id})}"
+                    type="button"
+                    class="btn btn-primary btn-sm"
+                  >
+                    See Recipe
+                  </a>
+                  <a
+                    th:href="@{/user/recipes/addRecipeToList(recipeId=${recipe.id})}"
+                    type="button"
+                    class="btn btn-warning btn-sm"
+                  >
+                    Save Recipe
+                  </a>
                 </div>
               </div>
             </div>
+          </div>
+        </div>
       </div>
     </div>
 
-
-    
-    <footer th:replace="~{fragments/general :: footer}" >
+    <footer th:replace="~{fragments/general :: footer}">
       <p>Testing Footer</p>
-  </footer>
+    </footer>
   </body>
 </html>
