--- a/src/main/resources/templates/recipe.html
+++ b/src/main/resources/templates/recipe.html
@@ -1,77 +1,129 @@
 <!DOCTYPE html>
-<html lang="en"
-    xmlns:th="http://www.thymeleaf.org"
->
-<head>
-    <meta charset="UTF-8">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="UTF-8" />
     <title>Quick Meal Planner</title>
-   
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
-     <link rel="stylesheet" href="/css/style.css">
 
-</head>
-<body>
-<nav th:replace="~{fragments/general :: header}" class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <nav
+      th:replace="~{fragments/general :: header}"
+      class="navbar navbar-expand-lg navbar-dark bg-dark"
+    >
+      <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/index}">Quick Meal Planner</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li th:if="${user != null}" class="nav-item">
-                    <a th:text="${user.firstName}" class="nav-link active" th:href="@{/user}" />
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
-                </li>
-            </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li th:if="${user != null}" class="nav-item">
+              <a
+                th:text="${user.firstName}"
+                class="nav-link active"
+                th:href="@{/user}"
+              />
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                th:href="@{/logout}"
+                >Logout</a
+              >
+            </li>
+          </ul>
         </div>
-    </div>
-</nav>
-<div class="container min-full-height">
-    <div class="row">
-        <a 
-            th:href="@{/user/recipes}" 
-            type="button" 
-            class="btn btn-primary btn-sm mt-4 mb-4 mr-4">
+      </div>
+    </nav>
+
+    <div class="container-fluid min-full-height dashboard-container">
+      <div class="row full-height">
+        <div th:if="${!savedByUser}" class="col-md-3 col-lg-2 dashboard-nav-container-wrapper">
+          <div
+            th:replace="~{fragments/general :: dash-nav(activeTab='otherRecipes')}"
+          >
+            <p>Testing Side Nav</p>
+          </div>
+        </div>
+        <div th:if="${savedByUser}" class="col-md-3 col-lg-2 dashboard-nav-container-wrapper">
+          <div
+            th:replace="~{fragments/general :: dash-nav(activeTab='recipes')}"
+          >
+            <p>Testing Side Nav</p>
+          </div>
+        </div>
+
+        <div class="col-md-9 col-lg-10 dashboard-content-container-wrapper">
+          <a
+            th:if="${savedByUser}"
+            th:href="@{/user/recipes}"
+            type="button"
+            class="btn btn-primary btn-sm mt-4 mb-4 mr-4"
+          >
             Back to saved recipes
-        </a>
-        <h1 th:text="${recipe.name}" class="text-center" />
-        <hr>
-        <div>
-            <h4>Ingredients: </h4>
-            <div th:each="ingredient: ${recipe.ingredients}" >
-                <p th:text="${ingredient}" />
+          </a>
+          <a
+            th:if="${!savedByUser}"
+            th:href="@{/user/recipes/otherRecipes}"
+            type="button"
+            class="btn btn-primary btn-sm mt-4 mb-4 mr-4"
+          >
+            Back to recently saved recipes by other users
+          </a>
+
+          <h1 th:text="${recipe.name}" class="text-center" />
+          <hr />
+          <div>
+            <h4>Ingredients:</h4>
+            <div th:each="ingredient: ${recipe.ingredients}">
+              <p th:text="${ingredient}" />
             </div>
             <h4>Directions:</h4>
-            <div th:each="direction: ${recipe.directions}" >
-                <p th:text="${direction}" />
+            <div th:each="direction: ${recipe.directions}">
+              <p th:text="${direction}" />
             </div>
-    
-            <p>Saved by <span th:text="${#lists.size(recipe.users)}" /> users </p>
-            <a  
-                th:if="${savedByUser}"
-                th:href="@{/user/recipes/removeRecipeFromList(recipeId=${recipe.id})}"
-                type="button"
-                class="btn btn-warning btn-sm">
-                Unsave
+
+            <p>
+              Saved by <span th:text="${#lists.size(recipe.users)}" /> users
+            </p>
+            <a
+              th:if="${savedByUser}"
+              th:href="@{/user/recipes/removeRecipeFromList(recipeId=${recipe.id})}"
+              type="button"
+              class="btn btn-warning btn-sm"
+            >
+              Unsave
             </a>
-            <a  
-                th:if="${!savedByUser}"
-                th:href="@{/user/recipes/addRecipeToList(recipeId=${recipe.id})}"
-                type="button"
-                class="btn btn-warning btn-sm">
-                save
+            <a
+              th:if="${!savedByUser}"
+              th:href="@{/user/recipes/addRecipeToList(recipeId=${recipe.id})}"
+              type="button"
+              class="btn btn-warning btn-sm"
+            >
+              save
             </a>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-<footer th:replace="~{fragments/general :: footer}" >
-    <p>Testing Footer</p>
-</footer>
-</body>
+    <footer th:replace="~{fragments/general :: footer}">
+      <p>Testing Footer</p>
+    </footer>
+  </body>
 </html>
