--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -39,7 +39,7 @@
                 th:href="@{/user}"
               />
             </li>
-            <li class="nav-item">
+            <li th:if="${user != null}" class="nav-item">
               <a
                 class="nav-link active"
                 aria-current="page"
@@ -51,12 +51,11 @@
         </div>
       </div>
     </nav>
-
     <div class="container-fluid min-full-height dashboard-container">
       <div class="row full-height">
         <div class="col-md-3 col-lg-2 dashboard-nav-container-wrapper">
           <div
-            th:replace="~{fragments/general :: dash-nav(activeTab='recipes')}"
+            th:replace="~{fragments/general :: dash-nav(activeTab='userProfile')}"
           >
             <p>Testing Side Nav</p>
           </div>
@@ -64,55 +63,72 @@
 
         <div class="col-md-9 col-lg-10 dashboard-content-container-wrapper">
           <div class="row">
-            <h1 class="text-center">My Saved Recipes</h1>
-            <hr />
-
-            <div
-              th:each="recipe: ${user.recipes}"
-              class="p-2 col-xs-12 col-sm-6 col-md-4 col-lg-3"
-            >
-              <div class="card" style="height: 100%">
-                <div class="card-body">
-                  <h5 th:text="${recipe.name}" class="card-title" />
-                  <h6
-                    class="card-subtitle mb-2 text-body-secondary"
-                    style="font-size: 0.8rem"
-                  >
-                    Saved by
-                    <span th:text="${#lists.size(recipe.users)}" /> users
-                  </h6>
-                  <p class="card-text">
-                    Requires
-                    <span th:text="${#lists.size(recipe.ingredients)}" />
-                    ingredients
-                    <br />
-                    Complete in
-                    <span th:text="${#lists.size(recipe.directions)}" /> steps
-                  </p>
-                  <a
-                    th:href="@{/user/recipes/recipe(recipeId=${recipe.id})}"
-                    type="button"
-                    class="btn btn-primary btn-sm"
-                  >
-                    See Recipe
-                  </a>
-                  <a
-                    th:href="@{/user/recipes/removeRecipeFromList(recipeId=${recipe.id})}"
-                    type="button"
-                    class="btn btn-warning btn-sm"
-                  >
-                    Unsave
-                  </a>
-                </div>
-              </div>
+            <h4>Account Information</h4>
+            <div th:if="${param.error}">
+              <div class="alert alert-danger">Something went wrong</div>
             </div>
+            <hr />
+            <form
+              method="POST"
+              role="form"
+              th:action="@{/user}"
+              th:object="${userDto}"
+            >
+              <input type="hidden" th:field="*{id}" />
+              <input type="hidden" th:field="*{email}" />
+              <p>User ID: <span th:text="${user.id}" /></p>
+              <p th:text="${user.email}" />
+              <div class="form-group mb-3">
+                <label class="form-label">First Name</label>
+                <input
+                  class="form-control"
+                  id="firstName"
+                  name="firstName"
+                  placeholder="Enter first name"
+                  th:field="*{firstName}"
+                  type="text"
+                />
+                <p
+                  th:errors="*{firstName}"
+                  class="text-danger"
+                  th:if="${#fields.hasErrors('firstName')}"
+                ></p>
+              </div>
+
+              <div class="form-group mb-3">
+                <label class="form-label">Last Name</label>
+                <input
+                  class="form-control"
+                  id="lastName"
+                  name="lastName"
+                  placeholder="Enter last name"
+                  th:field="*{lastName}"
+                  type="text"
+                />
+                <p
+                  th:errors="*{lastName}"
+                  class="text-danger"
+                  th:if="${#fields.hasErrors('lastName')}"
+                ></p>
+              </div>
+
+              <p>
+                Total Recipes Saved :
+                <span th:text="${#lists.size(user.recipes)}" />
+              </p>
+              <div class="form-group">
+                <button class="btn btn-primary" type="submit">
+                  Save Account Info
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
-
     <footer th:replace="~{fragments/general :: footer}">
       <p>Testing Footer</p>
     </footer>
+    <script src="/js/search-handler.js" type="application/javascript"></script>
   </body>
 </html>
