--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,147 +1,195 @@
 <!DOCTYPE html>
-<html lang="en"
-    xmlns:th="http://www.thymeleaf.org"
->
-<head>
-    <meta charset="UTF-8">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="UTF-8" />
     <title>Quick Meal Planner</title>
-   
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
 
-</head>
-<body>
-<nav th:replace="~{fragments/general :: header}" class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <nav
+      th:replace="~{fragments/general :: header}"
+      class="navbar navbar-expand-lg navbar-dark bg-dark"
+    >
+      <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/index}">Quick Meal Planner</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li th:if="${user != null}" class="nav-item">
-                    <a th:text="${user.firstName}" class="nav-link active" th:href="@{/user}" />
-                </li>
-                <li th:if="${user != null}" class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
-                </li>
-            </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li th:if="${user != null}" class="nav-item">
+              <a
+                th:text="${user.firstName}"
+                class="nav-link active"
+                th:href="@{/user}"
+              />
+            </li>
+            <li th:if="${user != null}" class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                th:href="@{/logout}"
+                >Logout</a
+              >
+            </li>
+          </ul>
         </div>
-    </div>
-</nav>
-<div class="container-fluid min-full-height dashboard-container">
-    <div class="row full-height">
-    <div th:replace="~{fragments/general :: dash-nav(activeTab='user')}" class="col-md-3 col-lg-2">
-
+      </div>
+    </nav>
+    <div class="container-fluid min-full-height dashboard-container">
+      <div class="row full-height">
+        <div class="col-md-3 col-lg-2 dashboard-nav-container-wrapper">
+          <div th:replace="~{fragments/general :: dash-nav(activeTab='user')}">
             <p>Testing Side Nav</p>
+          </div>
+        </div>
 
-    </div>
-
-    <!-- <a 
-        th:href="@{/user/recipes}" 
-        type="button" 
-        class="btn btn-primary btn-sm mt-4 mb-4 mr-4">
-        See Saved Recipes
-    </a>
-    
-    <a  
-        th:href="@{/user/recipes/otherRecipes}"
-        type="button"
-        class="btn btn-warning btn-sm mt-4 mb-4 mr-4">
-        Recently Saved By Other Users
-    </a> -->
-    <div class="col-md-8">
-        <div class="row">
-            <div class="col">
-                <a  
+        <div class="col-md-9 col-lg-10 dashboard-content-container-wrapper">
+          <div class="row">
+            <div class="col-lg-4 mb-3 d-flex align-items-stretch">              
+              <div class="card mb-4 rounded-3 shadow-sm">
+                <div class="card-header py-3">
+                  <h4 class="my0 fw-normal">Quick Search</h4>
+                </div>
+                <div class="card-body">
+                   <h2>In a hurry?</h2>
+                   <p>Try a quick search to find a 30-minute recipe. </p>
+                   <a
                     th:href="@{/user/findRecipe}"
                     type="button"
-                    class="btn btn-warning btn-sm mt-4 mb-4 mr-4">
-                    Find a New Recipe
-                </a>
+                    class="botton_align_button btn btn-lg btn-primary"
+                    >
+                      Find Recipe
+                    </a>
+                </div>
+               
+              </div>
             </div>
-            <div class="col">
-                <form
+            <div class="col-lg-4 mb-3 d-flex align-items-stretch">              
+              <div class="card mb-4 rounded-3 shadow-sm">
+                <div class="card-header py-3">
+                  <h4 class="my0 fw-normal">Search by Ingredients</h4>
+                </div>
+                <div class="card-body">
+                    <form
                     method="post"
                     role="form"
                     th:action="@{/user/findRecipeWithOptions}"
                     th:object="${optionsDto}"
                     class="form-horizontal"
-                >
+                  >
                     <div class="form-group mb-3">
-                        <input
-                                class="form-control form-control-lg"
-                                id="ingredient1"
-                                name="ingredient1"
-                                placeholder="Enter an ingredient"
-                                th:field="*{ingredient1}"
-                                type="text"
-                        />
+                      <input
+                        class="form-control form-control-lg"
+                        id="ingredient1"
+                        name="ingredient1"
+                        placeholder="Enter an ingredient"
+                        th:field="*{ingredient1}"
+                        type="text"
+                      />
                     </div>
                     <div class="form-group mb-3">
-                        <input
-                                class="form-control form-control-lg"
-                                id="ingredient2"
-                                name="ingredient2"
-                                placeholder="Enter an ingredient"
-                                th:field="*{ingredient2}"
-                                type="text"
-                        />
+                      <input
+                        class="form-control form-control-lg"
+                        id="ingredient2"
+                        name="ingredient2"
+                        placeholder="Enter an ingredient"
+                        th:field="*{ingredient2}"
+                        type="text"
+                      />
                     </div>
                     <div class="form-group mb-3">
-                        <input
-                                class="form-control form-control-lg"
-                                id="ingredient3"
-                                name="ingredient13"
-                                placeholder="Enter an ingredient"
-                                th:field="*{ingredient3}"
-                                type="text"
-                        />
+                      <input
+                        class="form-control form-control-lg"
+                        id="ingredient3"
+                        name="ingredient13"
+                        placeholder="Enter an ingredient"
+                        th:field="*{ingredient3}"
+                        type="text"
+                      />
                     </div>
                     <div class="form-group mb-3">
-                        <button type="submit" class="btn btn-primary">Find Recipe</button>
+                      <button type="submit" class="botton_align_button btn btn-lg btn-primary"
+                      >
+                        Find Recipe
+                      </button>
                     </div>
-                </form>
+                  </form>
+                </div>
+                
+              </div>
             </div>
-            <div class="col">
+            <div class="col-lg-4 mb-3 d-flex align-items-stretch">              
+              <div class="card mb-4 rounded-3 shadow-sm">
+                <div class="card-header py-3">
+                  <h4 class="my0 fw-normal">Search by Diet</h4>
+                </div>
+                <div class="card-body">
                 <form
-                    method="post"
-                    role="form"
-                    th:action="@{/user/findRecipeWithRestriction}"
-                    th:object="${optionsDto}"
-                    class="form-horizontal"
+                  method="post"
+                  role="form"
+                  th:action="@{/user/findRecipeWithRestriction}"
+                  th:object="${optionsDto}"
+                  class="form-horizontal"
                 >
-                    <div class="form-group mb-3">
-                        <select th:field="*{restriction}" class="form-select form-select-lg">
-                            <option th:value="0">Select Dietary Restriction</option>
-                            <option th:value="keto" th:text="Keto"></option>
-                            <option th:value="paleo" th:text="Paleo"></option>
-                            <option th:value="gluten_free" th:text="'Gluten Free'"></option>
-                            <option th:value="low_carb" th:text="'Low Carb'"></option>
-                            <option th:value="pescetarian" th:text="Pescetarian"></option>
-                            <option th:value="vegetarian" th:text="Vegetarian"></option>
-                            <option th:value="vegan" th:text="Vegan"></option>
-     
-                        </select>
-                    </div>
-                    
-                    <div class="form-group mb-3">
-                        <button type="submit" class="btn btn-primary">Find Recipe</button>
-                    </div>
-                </form>
+                <div class="form-group mb-3">
+                  <select
+                    th:field="*{restriction}"
+                    class="form-select form-select-lg"
+                  >
+                    <option th:value="0">Select Dietary Restriction</option>
+                    <option th:value="keto" th:text="Keto"></option>
+                    <option th:value="paleo" th:text="Paleo"></option>
+                    <option
+                      th:value="gluten_free"
+                      th:text="'Gluten Free'"
+                    ></option>
+                    <option th:value="low_carb" th:text="'Low Carb'"></option>
+                    <option
+                      th:value="pescetarian"
+                      th:text="Pescetarian"
+                    ></option>
+                    <option th:value="vegetarian" th:text="Vegetarian"></option>
+                    <option th:value="vegan" th:text="Vegan"></option>
+                  </select>
+                </div>
+
+                <div class="form-group mb-3">
+                  <button type="submit" class="botton_align_button btn btn-lg btn-primary">
+                  Find Recipe
+                  </button>
+                </div>
+              </form>
+
+                </div>
+
+                
+
+              </div>
+              
             </div>
+          </div>
         </div>
-        
+      </div>
     </div>
-    
-    </div>
-</div>
-<footer th:replace="~{fragments/general :: footer}" >
-    <p>Testing Footer</p>
-</footer>
-<script src="/js/search-handler.js" type="application/javascript"></script>
-</body>
+    <footer th:replace="~{fragments/general :: footer}">
+      <p>Testing Footer</p>
+    </footer>
+    <script src="/js/search-handler.js" type="application/javascript"></script>
+  </body>
 </html>
