--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -129,6 +129,6 @@
     <footer th:replace="~{fragments/general :: footer}">
       <p>Testing Footer</p>
     </footer>
-    <script src="/js/search-handler.js" type="application/javascript"></script>
+    <!-- <script src="/js/search-handler.js" type="application/javascript"></script> -->
   </body>
 </html>
